--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
 <a href="#Madrid">BABY BOOM REAL MADRID</a><br>
 <a href="#Zaragoza">BABY BOOM REAL ZARAGOZA</a><br>
 <a href="#Analisis">ANALISIS EVENTOS CON MAYOR IMPACTO</a><br>
+<a href="#Conclusion">CONCLUSION</a><br>
 
 <a name="Introduccion" id="a"></a>
 <font color = "blue"><h2>INTRODUCCION</h2></font>
@@ -95,6 +96,14 @@ Con la siguiente gráfica he intentado ponderar qué título tuvo más impacto e
 Como se puede observar, el impacto que más peso tuvo fue la Copa del Mundo. Es lógico porque fue el primer campeonato de este tipo que ganó la Selección Española en toda su historia y trajo gran alegría a un país en crisis. También destacaría la Eurocopa del 2010 por la misma razón, y sobre todo la Recopa del Real Zaragoza en el año 1995, ya que fue y ha sido el único título europeo ganado por este equipo. Por último, respecto a las Champions, hay también un par de casos con gran impacto pero que curiosamente no son ni la Champions del año 1992 del Barcelona (primera ganada), ni la de 19997 del Real Madrid (la primera ganada después de muchos años). Creo que habría que tener en cuenta variables adicionales para obtener unas conclusiones estadísticas más afinadas en el estudio de nacimientos después de ganar Champions. <br><br>
 
 <iframe width="728.5" height="450.4558333333333" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRiryt3SROI0FC952hxTAAAsn0_rYuz5I9QO7ntzJcdYQrau-RZqKtU8y8ueeGbrO2k_OZU8oGCI0rI/pubchart?oid=310149931&amp;format=interactive"></iframe><br><br>
+<a href="#Indice">Indice</a><br>
+
+<a name="Conclusion" id="a"></a>
+<font color = "blue"><h2>CONCLUSION</h2></font>
+Después de este estudio, solamente veo claramente una relación directa entre los nacimientos de bebés y victorias de fútbol en los casos de la primera Eurocopa, Mundial de la Selección y Recopa del Zaragoza.<br>
+En los casos de las Champions del Real Madrid y Barcelona, también hay un par de casos que se ve un repunte de la natalidad, pero no veo la misma tendencia en otras competiciones que fueron más relevantes para la historias de esos equipos.<br>
+Como he mencionado anteriormente, creo que habría que incluir más datos socio-políticos para obtener mejores conclusiones, y también intentar obtener datos de natalidad con un nivel de detalle mayor, es decir, obtener datos de nacimientos en cada día y no un sumatorio mensual que es lo que nos ofrece el INE. De esta manera sí que podríamos hacer una correlación más fina entre la fecha exacta del evento futbolístico y la natalidad posterior.<br>
+Espero que haya gustado a la audiencia ya que me intención ha sido mostrar gráficamente con datos públicos una pregunta divertida que muchas veces nos hemos hecho los amantes del fútbol. <br>
 
 <a href="#Indice">Indice</a><br>
 </font>
