--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@ Como se puede observar, el impacto que más peso tuvo fue la Copa del Mundo. Es 
 
 <a name="Conclusion" id="a"></a>
 <font color = "blue"><h2>CONCLUSION</h2></font>
-Después de este estudio, solamente veo claramente una relación directa entre los nacimientos de bebés y victorias de fútbol en los casos de la primera Eurocopa, Mundial de la Selección y Recopa del Zaragoza.<br>
-En los casos de las Champions del Real Madrid y Barcelona, también hay un par de casos que se ve un repunte de la natalidad, pero no veo la misma tendencia en otras competiciones que fueron más relevantes para la historias de esos equipos.<br>
-Como he mencionado anteriormente, creo que habría que incluir más datos socio-políticos para obtener mejores conclusiones, y también intentar obtener datos de natalidad con un nivel de detalle mayor, es decir, obtener datos de nacimientos en cada día y no un sumatorio mensual que es lo que nos ofrece el INE. De esta manera sí que podríamos hacer una correlación más fina entre la fecha exacta del evento futbolístico y la natalidad posterior.<br>
-Espero que haya gustado a la audiencia ya que me intención ha sido mostrar gráficamente con datos públicos una pregunta divertida que muchas veces nos hemos hecho los amantes del fútbol. <br>
+Después de este estudio, solamente veo claramente una relación directa entre los nacimientos de bebés y victorias de fútbol en los casos de la primera Eurocopa, Mundial de la Selección y Recopa del Zaragoza.<br><br>
+En los casos de las Champions del Real Madrid y Barcelona, también hay un par de casos que se ve un repunte de la natalidad, pero no veo la misma tendencia en otras competiciones que fueron más relevantes para la historias de esos equipos.<br><br>
+Como he mencionado anteriormente, creo que habría que incluir más datos socio-políticos para obtener mejores conclusiones, y también intentar obtener datos de natalidad con un nivel de detalle mayor, es decir, obtener datos de nacimientos en cada día y no un sumatorio mensual que es lo que nos ofrece el INE. De esta manera sí que podríamos hacer una correlación más fina entre la fecha exacta del evento futbolístico y la natalidad posterior.<br><br>
+Espero que haya gustado a la audiencia ya que me intención ha sido mostrar gráficamente con datos públicos una pregunta divertida que muchas veces nos hemos hecho los amantes del fútbol. <br><br>
 
 <a href="#Indice">Indice</a><br>
 </font>
