--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@ URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
 <a name="Introduccion" id="a"></a>
 <font color = "blue"><h2>INTRODUCCION</h2></font>
 
-¿Sube la natalidad cuando se gana una campeonato de fútbol?
+¿Sube la natalidad cuando se gana una campeonato de fútbol?<br><br>
 
-El objetivo de este análisis es dar respuesta a la pregunta anterior. Para ello he cruzado datos estadísticos del INE y de la Fifa y Wikipedia desde que tengo memoria en lo referido en este deporte, que son los años 90.
+El objetivo de este análisis es dar respuesta a la pregunta anterior. Para ello he cruzado datos estadísticos del INE y de la Fifa y Wikipedia desde que tengo memoria en lo referido en este deporte, que son los años 90.<br><br>
 
-Con el fin de no hacer un análisis demasiado largo y tedioso, he centrado el mismo en tres principales apartados según la relevancia de las victorias a nivel nacional, y según mis propios intereses (soy nativo de Zaragoza y seguidor de este equipo)<br>
+Con el fin de no hacer un análisis demasiado largo y tedioso, he centrado el mismo en tres principales apartados según la relevancia de las victorias a nivel nacional, y según mis propios intereses (soy nativo de Zaragoza y seguidor de este equipo)<br><br>
 
 - Histórico de nacimientos a nivel nacional meses después de que la Selección Española haya ganado un título. <br>
 - Histórico de nacimientos en España cuando el Barcelona o Real Madrid han ganado una Champions League. <br>
 - Histórico de nacimientos en la región de Aragón cuando el Real Zaragoza ha ganado un título. <br>
-- Análisis del impacto positivo de crecimientos desde el mes 8 al mes sobre la media anual en cada evento futbolístico mencionadpo anteriormente.<br>
+- Análisis del impacto positivo de crecimientos desde el mes 8 al mes sobre la media anual en cada evento futbolístico mencionadpo anteriormente.<br><br>
 <br>
 Este estudio no tiene en cuenta variables económicas y políticas que pudieron afectar al número de nacimientos en ciertos años como son el cheque bebé dotado por los gobiernos de Zapatero desde 2007 a 2010, o la gran crisis económica que afectó a España desde 2008 hasta 2014. La inclusión de estas variables podría ser objetivo de un análisis futuro más profundo y aproximado a la realidad.
 <br><br>
 La audiencia de este análisis podría ser cualquier amante del fútbol y de los niños, seguidores de los equipos mencionados anteriormente, y cualquier entidad privada o pública interesada en el crecimiento población: hospitales, marcas de productos para bebés, tiendas especializadas, etc.
-<br>
+<br><br>
 Las herramientas o medio utilizado para llevar a cabo este análisis ha sido google spreadsheet y stackblitz bajo lenguaje html. También se ha compartido en GitHub.
 <br><br>
 A modo introductorio y humorístico comparto para el lector este video tan divertido relacionado con el tema tratado: relación entre el fútbol y nacimientos de bebés.<br><br>
