--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Este estudio no tiene en cuenta variables económicas y políticas que pudieron 
 <br><br>
 La audiencia de este análisis podría ser cualquier amante del fútbol y de los niños, seguidores de los equipos mencionados anteriormente, y cualquier entidad privada o pública interesada en el crecimiento población: hospitales, marcas de productos para bebés, tiendas especializadas, etc.
 <br><br>
-Las herramientas o medio utilizado para llevar a cabo este análisis ha sido google spreadsheet y stackblitz bajo lenguaje html. También se ha compartido en GitHub.
+Las herramientas o medio utilizado para llevar a cabo este análisis ha sido google spreadsheet y stackblitz bajo lenguaje html. También se ha compartido en GitHub. He decido utiliar estas herramientas porque me siento cómodo tanto utilizando spreadsheet y html. También quería compartirlo con mis amigos por whatsapp, así que la programación en html la he realizado con stackblitz que te permite compartir el código de forma muy fácil.
 <br><br>
 A modo introductorio y humorístico comparto para el lector este video tan divertido relacionado con el tema tratado: relación entre el fútbol y nacimientos de bebés.<br><br>
 
