--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ URL: https://stackblitz.com/edit/typescript-1jaqyi?file=index.html
 
 ¿Sube la natalidad cuando se gana una campeonato de fútbol?<br><br>
 
-El objetivo de este análisis es dar respuesta a la pregunta anterior. Para ello he cruzado datos estadísticos del INE y de la Fifa y Wikipedia desde que tengo memoria en lo referido en este deporte, que son los años 90.<br><br>
+El objetivo de este análisis es dar respuesta a la pregunta anterior. Para ello he cruzado datos estadísticos del INE y Wikipedia desde que tengo memoria en lo referido en este deporte, que son los años 90.<br><br>
 
 Con el fin de no hacer un análisis demasiado largo y tedioso he centrado el mismo en tres principales apartados según la relevancia de las victorias a nivel nacional, y según mis propios intereses (soy nativo de Zaragoza y seguidor de este equipo).<br><br>
 
